--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pàgina principal</title>
+    <title>Recetas</title>
   </head>
   <body>
-    <h1>Pàgina principal</h1>
-    <nav>
+    <header>
+      <h1>Recetas</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Sobre mi</a></li>
+          <li><a href="#">Recetas</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Otras cosas</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Receta 1</h2>
+        <img src="ensalada.png" alt="Receta 1">
+        <p>Descripción de la receta 1</p>
+      </section>
+      <section>
+        <h2>Receta 2</h2>
+        <img src="ensalada.png" alt="Receta 2">
+        <p>Descripción de la receta 2</p>
+      </section>
+      <section>
+        <h2>Receta 3</h2>
+        <img src="ensalada.png" alt="Receta 3">
+        <p>Descripción de la receta 3</p>
+      </section>
+      <section>
+        <h2>Receta 4</h2>
+        <img src="ensalada.png" alt="Receta 4">
+        <p>Descripción de la receta 4</p>
+      </section>
+      <section>
+        <h2>Receta 5</h2>
+        <img src="ensalada.png" alt="Receta 5">
+        <p>Descripción de la receta 5</p>
+      </section>
+      <section>
+        <h2>Receta 6</h2>
+        <img src="ensalada.png" alt="Receta 6">
+        <p>Descripción de la receta 6</p>
+      </section>
+    </main>
+    <footer>
       <ul>
-        <li><a href="recepta.html">Recepta</a></li>
-        <li><a href="llista.html">Llista de receptes</a></li>
-        <li><a href="contacte.html">Formulari de contacte</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Pinterest</a></li>
+        <li><a href="#">Email</a></li>
+        <li><a href="#">RSS</a></li>
       </ul>
-    </nav>
+    </footer>
   </body>
 </html>
