--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recetas</title>
+    <title align:center>Recetas</title>
   </head>
   <body>
     <header>
       <h1>Recetas</h1>
       <nav>
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Sobre mi</a></li>
-          <li><a href="recepta.html">Recetas</a></li>
-          <li><a href="contacte.html">Contacto</a></li>
-          <li><a href="#">Otras cosas</a></li>
+          <nav><a href="#">Inicio</a></nav>
+          <a href="#">Sobre mi</a>
+          <a href="recepta.html">Recetas</a>
+          <a href="contacte.html">Contacto</a>
+          <a href="#">Otras cosas</a>
         </ul>
       </nav>
     </header>
