--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <body>
     <header>
       <h1>Recetas</h1>
-      <nav>
+      <nav style="text-align: ce
+      ;">
           <nav><a href="#">Inicio</a></nav>
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
           <a href="contacte.html">Contacto</a>
           <a href="#">Otras cosas</a>
-        </ul>
       </nav>
     </header>
