--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <body>
     <header>
       <h1>Recetas</h1>
-      <nav style="text-align: ce
-      ;">
+      <nav style="text-align: center;">
           <nav><a href="#">Inicio</a></nav>
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
