--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header>
       <h1>Recetas</h1>
       <nav style="text-align: center;">
-          <nav><a href="#">Inicio</a></nav>
+          <a href="#">Inicio</a>
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
           <a href="contacte.html">Contacto</a>
