--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1 style="align-text: center;">Recetas</h1>
+    <h1 style="text-align: center;">Recetas</h1>
   </head>
   <body>
     <header>
