--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <div style="text-align: center;"
     <h1 style="text-align: center;">Recetas</h1>
-  </head>
+    </head>
+    </html><div
   <body>
     <header>
       <h1>Recetas</h1>
