--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </html><div
   <body>
     <header>
-      <h1>Recetas</h1>
+      <h1 style="text-align: center;">Recetas</h1>
       <nav style="text-align: center;">
           <a href="#">Inicio</a>
           <a href="#">Sobre mi</a>
