--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <div style="text-align: center;"
-    <h1 style="text-align: center;">Recetas</h1>
     </head>
-    </html><div
+    </html>
   <body>
     <header>
       <h1 style="text-align: center;">Recetas</h1>
