--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     </head>
-    </html>
   <body>
     <header>
       <h1 style="text-align: center;">Recetas</h1>
@@ -14,3 +13,5 @@
           <a href="#">Otras cosas</a>
       </nav>
     </header>
+</body>
+</html>
