--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <title align:center>Recetas</title>
   </head>
-  <body>
     <header>
       <h1>Recetas</h1>
       <nav>
-          <nav><a href="#">Inicio</a></nav>
+          <nav style=""><a href="#">Inicio</a></nav>
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
           <a href="contacte.html">Contacto</a>
           <a href="#">Otras cosas</a>
-        </ul>
       </nav>
     </header>
+    <body>
+      <section></section>
+    </body>
+    <footer><nav></nav></footer>
+</html>
