--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-<<<<<<< HEAD
-    <title align:center>Recetas</title>
-  </head>
-    <header>
-      <h1>Recetas</h1>
-      <nav>
-          <nav style=""><a href="#">Inicio</a></nav>
-=======
     </head>
   <body>
     <header>
-      <h1 style="text-align: center;">Recetas</h1>
+      <img src="/imatges/Logo-Delicias.png" style="align-items: ;center"/>
       <nav style="text-align: center;">
           <a href="#">Inicio</a>
->>>>>>> a88b4f041229eb361dba32316010fdb4043791a1
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
           <a href="contacte.html">Contacto</a>
           <a href="#">Otras cosas</a>
       </nav>
     </header>
-<<<<<<< HEAD
-    <body>
-      <section></section>
-    </body>
-    <footer><nav></nav></footer>
-=======
 </body>
->>>>>>> a88b4f041229eb361dba32316010fdb4043791a1
 </html>
