--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     </head>
   <body>
     <header>
-      <img src="/imatges/Logo-Delicias.png" style="align-items: ;center"/>
+      <div style="text-align: center">
+      <img src="/imatges/Logo-Delicias.png" alt="="</>
+      </div>
       <nav style="text-align: center;">
           <a href="#">Inicio</a>
           <a href="#">Sobre mi</a>
