--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <header>
       <div style="text-align: center">
-      <img src="/imatges/Logo-Delicias.png" alt="="</>
+      <img src="imatges/Logo-Delicias.png" alt="="</>
       </div>
       <nav style="text-align: center;">
           <a href="#">Inicio</a>
