--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/estilo.css">
     </head>
   <body>
     <header>
@@ -16,4 +17,5 @@
       </nav>
     </header>
 </body>
+
 </html>
