--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <div style="text-align: center">
       <img src="imatges/Logo-Delicias.png" alt="="</>
       </div>
+      <div class="enlaces">
       <nav style="text-align: center;">
           <a href="#">Inicio</a>
           <a href="#">Sobre mi</a>
@@ -15,7 +16,17 @@
           <a href="contacte.html">Contacto</a>
           <a href="#">Otras cosas</a>
       </nav>
+    </div>
     </header>
+    <div style="text-align: center;"
 </body>
+<div>
+  <div class="fila">
+    <div class="columna"
 
+
+
+
+
+</div>
 </html>
