--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <div style="text-align: center;"
 </body>
 <div>
-  <div class="fila">
-    <div class="columna"
+  <div class="fila"></div>
+    <div class="columna"></div>
+    <p style="font-size: larger;" >Sobre mi </p>
+    <img src="imatges/isagil.png" alt=""/>
+    <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
+    </div>
+    <div class="">
 
-
-
-
-
+    </div>
 </div>
 </html>
