--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     <img src="imatges/isagil.png" alt=""/>
     <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
     </div>
-    <div class="">
-
+      <div class="columna"></div>
+      <img src="imatges/Pasta.jpg" alt="">
+      <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
+      <p class="bordes">13 de marzo 2019</p>
+      p
     </div>
 </div>
 </html>
