--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="imatges/Pasta.jpg" alt="">
       <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
       <p class="bordes">13 de marzo 2019</p>
-      p
+      <p>Una salsa vegana para la pasta, tan sabrosa</p>
     </div>
 </div>
 </html>
