--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
       <p class="bordes">13 de marzo 2019</p>
       <p>Una salsa vegana para la pasta, tan sabrosa</p>
     </div>
+    <div>
+
+    </div>
 </div>
 </html>
