--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
 <div>
   <div class="fila"></div>
     <div class="columna"></div>
-    <p style="font-size: larger;" >Sobre mi </p>
-    <img src="imatges/isagil.png" alt=""/>
-    <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
+      <p style="font-size: larger;" >Sobre mi </p>
+      <img src="imatges/isagil.png" alt="I1"/>
+      <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
     </div>
-      <div class="columna"></div>
-      <img src="imatges/Pasta.jpg" alt="">
+    <div class="columna"></div>
+      <img src="imatges/Pasta.jpg" alt="I2">
       <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
       <p class="bordes">13 de marzo 2019</p>
       <p>Una salsa vegana para la pasta, tan sabrosa</p>
     </div>
-    <div>
-
+    <div class="columna">
+      <img src="imatges/galletas.jpg" alt="I3"/>
+      <p class="text">Galletas de avena, rosa y lima</p>
+      <p 12 de febrero,2019></p>
     </div>
+
 </div>
 </html>
