--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
       <p class="text">Galletas de avena, rosa y lima</p>
       <p 12 de febrero,2019></p>
     </div>
+    <div class="fila">
+      <div class="columna">
+        <img src="/imatges/libro.png" alt="I4" />
+        <p class="text">Texto 4</p>
+      </div>
 
+      <div class="columna">
+        <img src="/imatges/mijo.jpg" alt="I5" />
+        <p class="text">Texto 5</p>
+      </div>
+
+      <div class="columna">
+        <img src="/imatges/calabacines.jpg" alt="I6" />
+        <p class="text">Texto 6</p>
+      </div>
+    </div>
 </div>
 </html>
