--- a/index.html
+++ b/index.html
@@ -21,36 +21,36 @@
     <div style="text-align: center;"
 </body>
 <div>
-    <div class="columna">
-      <div>
+    <div class="columna1">
+      <div class="muestra">
         <p style="font-size: larger;" >Sobre mi </p>
         <img src="imatges/isagil.png" alt="I1"/>
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
-      <div>
+      <div class="muestra">
         <img src="/imatges/libro.png" alt="I4" />
         <p class="text">Texto 4</p>
       </div>
     </div>
     <div class="columna">
-      <div>
+      <div class="muestra">
         <img src="imatges/Pasta.jpg" alt="I2">
         <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
         <p class="bordes">13 de marzo 2019</p>
         <p>Una salsa vegana para la pasta, tan sabrosa</p>
       </div>
-      <div>
+      <div class="muestra">
         <img src="/imatges/mijo.jpg" alt="I5" />
         <p class="text">Texto 5</p>
       </div>
     </div>
     <div class="columna">
-      <div>
+      <div class="muestra">
         <img src="imatges/galletas.jpg" alt="I3"/>
         <p class="text">Galletas de avena, rosa y lima</p>
         <p 12 de febrero,2019></p>
       </div>
-      <div>
+      <div class="muestra">
         <img src="/imatges/calabacines.jpg" alt="I6" />
         <p class="text">Texto 6</p>
       </div>
