--- a/index.html
+++ b/index.html
@@ -18,42 +18,40 @@
       </nav>
     </div>
     </header>
-    <div style="text-align: center;"
-</body>
-<div>
-    <div class="columna1">
+    <div class="columna">
       <div class="muestra">
         <p style="font-size: larger;" >Sobre mi </p>
-        <img src="imatges/isagil.png" alt="I1"/>
+        <img src="imatges/isagil.png" alt="I1" width="70%" height="70%"/>
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
       <div class="muestra">
-        <img src="/imatges/libro.png" alt="I4" />
+        <img src="/imatges/libro.png" alt="I4" width="70%" height="70%"/>
         <p class="text">Texto 4</p>
       </div>
     </div>
-    <div class="columna">
+    <div class="columna" width="70%" height="70%">
       <div class="muestra">
         <img src="imatges/Pasta.jpg" alt="I2">
         <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
         <p class="bordes">13 de marzo 2019</p>
         <p>Una salsa vegana para la pasta, tan sabrosa</p>
       </div>
-      <div class="muestra">
+      <div class="muestra" width="70%" height="70%">
         <img src="/imatges/mijo.jpg" alt="I5" />
         <p class="text">Texto 5</p>
       </div>
     </div>
     <div class="columna">
       <div class="muestra">
-        <img src="imatges/galletas.jpg" alt="I3"/>
+        <img src="imatges/galletas.jpg" alt="I3" width="70%" height="70%"/>
         <p class="text">Galletas de avena, rosa y lima</p>
         <p 12 de febrero,2019></p>
       </div>
       <div class="muestra">
-        <img src="/imatges/calabacines.jpg" alt="I6" />
+        <img src="/imatges/calabacines.jpg" alt="I6" width="70%" height="70%"/>
         <p class="text">Texto 6</p>
       </div>
     </div>
 </div>
+</body>
 </html>
