--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="columna">
       <div class="muestra">
         <p style="font-size: larger;" >Sobre mi </p>
-        <img src="imatges/isagil.png" alt="I1" width="70%" height="70%"/>
+        <img src="imatges/isagil.png" alt="I1" width="50%" height="50%"/>
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
       <div class="muestra">
@@ -29,15 +29,15 @@
         <p class="text">Texto 4</p>
       </div>
     </div>
-    <div class="columna" width="70%" height="70%">
+    <div class="columna" >
       <div class="muestra">
-        <img src="imatges/Pasta.jpg" alt="I2">
+        <img src="imatges/Pasta.jpg" alt="I2"width="70%" height="70%">
         <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
         <p class="bordes">13 de marzo 2019</p>
         <p>Una salsa vegana para la pasta, tan sabrosa</p>
       </div>
-      <div class="muestra" width="70%" height="70%">
-        <img src="/imatges/mijo.jpg" alt="I5" />
+      <div class="muestra" >
+        <img src="/imatges/mijo.jpg" alt="I5" width="70%" height="70%"/>
         <p class="text">Texto 5</p>
       </div>
     </div>
