--- a/index.html
+++ b/index.html
@@ -18,38 +18,57 @@
       </nav>
     </div>
     </header>
-    <div class="columna">
-      <div class="muestra">
+    <div class="columna1">
+      <div>
         <p style="font-size: larger;" >Sobre mi </p>
         <img src="imatges/isagil.png" alt="I1" width="40%" height="40%"/>
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
       <div class="muestra">
-        <img src="/imatges/libro.png" alt="I4" width="40%" height="40%"/>
-        <p class="text">Texto 4</p>
+        <div class="fondo_gris">
+          <p class="exp" style="font-weight: bolder;">Suscríbete a mi blog</p>
+          <img src="/imatges/libro.png" alt="I4" width="40%" height="40%" style="text-align: center;"/>
+          <p class="text"> Y consigue GRATIS mi ebook con 10 recetas exclusivas con superalimentos</p>
+        </div>
+        <div class="fondo_verde">
+          <p style="font-weight: bolder;">Apúntame</p>
+        </div>
       </div>
     </div>
     <div class="columna" >
-      <div class="muestra">
-        <img src="imatges/Pasta.jpg" alt="I2"width="70%" height="70%">
-        <p class="Pasta">Pasta con salsa de coliflor y pimienta de Jamaica</p>
-        <p class="bordes">13 de marzo 2019</p>
-        <p>Una salsa vegana para la pasta, tan sabrosa</p>
+      <div>
+        <img src="imatges/Pasta.jpg" alt="I2"width="90%" height="90%">
+        <div class="comentario">
+          <p class="Pasta" style="text-align: center;font-weight: bolder;" >Pasta con salsa de coliflor y pimienta de Jamaica</p>
+          <p class="bordes_verdes" style="text-align: center;">13 marzo, 2019</p>
+          <p class="exp">Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en ...</p>
+        </div>
       </div>
-      <div class="muestra" >
-        <img src="/imatges/mijo.jpg" alt="I5" width="70%" height="70%"/>
-        <p class="text">Texto 5</p>
+      <div>
+        <img src="/imatges/mijo.jpg" alt="I5" width="90%" height="90%"/>
+        <div class="comentario">
+          <p style="text-align: center;font-weight: bolder;">Mijo cremoso con lentejas, hortalizas y shitake</p>
+          <p class="bordes_verdes" style="text-align: center;"> 1 febrero, 2019</p>
+          <p class="exp">Un buen plato de mijo cremoso con lentejas y hortalizas es todo lo que necesitas para templar el cuerpo este invierno! Delicioso y fácil!</p>
+        </div>
       </div>
     </div>
     <div class="columna">
-      <div class="muestra">
-        <img src="imatges/galletas.jpg" alt="I3" width="70%" height="70%"/>
-        <p class="text">Galletas de avena, rosa y lima</p>
-        <p 12 de febrero,2019></p>
+      <div>
+        <img src="imatges/galletas.jpg" alt="I3" width="90%" height="90%"/>
+        <div class="comentario">
+          <p style="text-align: center;font-weight: bolder;">Galletas de avena, rosa y lima</p>
+          <p class="bordes_verdes" style="text-align: center;"> 12 febrero, 2019</p>
+          <p class="exp">Galletitas para San valentín? Estas galletas ricas y crujientes, elaboradas con avena y con un rico sabor a rosa y lima son perfectas para celebrarlo</p>
+        </div>
       </div>
-      <div class="muestra">
-        <img src="/imatges/calabacines.jpg" alt="I6" width="70%" height="70%"/>
-        <p class="text">Texto 6</p>
+      <div>
+        <img src="/imatges/calabacines.jpg" alt="I6" width="90%" height="90%" />
+        <div class="comentario">
+          <p style="text-align: center;font-weight: bolder;">Calabacines rellenos de arroz negro y calabaza</p>
+          <p class="bordes_verdes" style="text-align: center;"> 18 febrero, 2018</p>
+          <p class="exp">Estos calabcines rellenos de arroz negro y calabaza que te propongo hoy, son la última receta que publico en el blog en ...</p>
+        </div>
       </div>
     </div>
 </div>
