--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="columna1">
       <div>
         <p style="font-size: larger;" >Sobre mi </p>
-        <img src="imatges/isagil.png" alt="I1" width="40%" height="40%"/>
+        <img src="imatges/isagil.png" alt="I1" width="40%" height="40%" style="text-align: center;"/>
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
       <div class="muestra">
