--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </div>
     </header>
     <div class="columna1">
-      <div>
+      <div style="text-align: center;">
         <p style="font-size: larger;" >Sobre mi </p>
-        <img src="imatges/isagil.png" alt="I1" width="40%" height="40%" style="text-align: center;"/>
+        <img src="imatges/isagil.png" alt="I1" width="40%" height="40%" />
         <p class="sobremi" >Hola bienvenid@ a mi blog un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas</p>
       </div>
       <div class="muestra">
