--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="imatges/Logo-Delicias.png" alt="="</>
       </div>
       <div class="enlaces">
-      <nav style="text-align: center;">
+      <nav style="text-align: center;" class="nav_header">
           <a href="#">Inicio</a>
           <a href="#">Sobre mi</a>
           <a href="recepta.html">Recetas</a>
