--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
           <img src="/imatges/libro.png" alt="I4" width="40%" height="40%" style="text-align: center;"/>
           <p class="text"> Y consigue GRATIS mi ebook con 10 recetas exclusivas con superalimentos</p>
         </div>
-        <div class="fondo_verde">
-          <p style="font-weight: bolder;">Apúntame</p>
-        </div>
+          <p style="font-weight: bolder;"class="fondo_verde">Apúntame</p>
       </div>
     </div>
     <div class="columna" >
