--- a/index.html
+++ b/index.html
@@ -70,5 +70,13 @@
       </div>
     </div>
 </div>
+<footer>
+  <p>FACEBOOK</p>
+  <p>TWITTER</p>
+  <p>INSTAGRAM</p>
+  <p>PINTEREST</p>
+  <p>EMAIL</p>
+  <p>RSS</p>
+</footer>
 </body>
 </html>
