--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       <div style="text-align: center">
       <img src="imatges/Logo-Delicias.png" alt="="</>
       </div>
-      <div class="enlaces">
-      <nav style="text-align: center;" class="nav_header">
-          <a href="#">Inicio</a>
-          <a href="#">Sobre mi</a>
-          <a href="recepta.html">Recetas</a>
-          <a href="contacte.html">Contacto</a>
-          <a href="#">Otras cosas</a>
+      <div class="nav_head">
+      <nav style="text-align: center;">
+          <a href="#">INICIO</a>
+          <a href="#">SOBRE MI</a>
+          <a href="recepta.html">RECETAS</a>
+          <a href="contacte.html">CONTACTO</a>
+          <a href="#">OTRAS COSAS</a>
       </nav>
     </div>
     </header>
@@ -71,12 +71,7 @@
     </div>
 </div>
 <footer>
-  <p>FACEBOOK</p>
-  <p>TWITTER</p>
-  <p>INSTAGRAM</p>
-  <p>PINTEREST</p>
-  <p>EMAIL</p>
-  <p>RSS</p>
+  <nav class="nav_footer">FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
 </footer>
 </body>
 </html>
