--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <nav style="text-align: center;">
           <a href="#">INICIO</a>
           <a href="#">SOBRE MI</a>
-          <a href="recepta.html">RECETAS</a>
-          <a href="contacte.html">CONTACTO</a>
+          <a href="receta/recepta.html">RECETAS</a>
+          <a href="contacto/contacte.html">CONTACTO</a>
           <a href="#">OTRAS COSAS</a>
       </nav>
     </div>
