--- a/lista/llista.html
+++ b/lista/llista.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Llista de receptes</h1>
     <p>En construcció</p>
-    <a href="index.html">Tornar a la pàgina principal</a>
+    <a href="/index.html">Tornar a la pàgina principal</a>
   </body>
 </html>
