--- a/receta/recepta.html
+++ b/receta/recepta.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Recepta</h1>
     <p>En construcció</p>
-    <a href="index.html">Tornar a la pàgina principal</a>
+    <a href="/index.html">Tornar a la pàgina principal</a>
   </body>
 </html>
