--- a/contacto/contacte.html
+++ b/contacto/contacte.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Formulari de contacte</h1>
     <p>En construcció</p>
-    <a href="index.html">Tornar a la pàgina principal</a>
+    <a href="/index.html">Tornar a la pàgina principal</a>
   </body>
 </html>
