--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div>
-        <img src="/imatges/mijo.jpg" alt="I5" width="70%" height="70%"/>
+        <img src="imatges/mijo.jpg" alt="I5" width="70%" height="70%"/>
         <div class="comentario">
           <p style="text-align: center;font-weight: bolder;">Mijo cremoso con lentejas, hortalizas y shitake</p>
           <p class="bordes_verdes" style="text-align: center;"> 1 febrero, 2019</p>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div>
-        <img src="/imatges/calabacines.jpg" alt="I6" width="70%" height="70%" />
+        <img src="imatges/calabacines.jpg" alt="I6" width="70%" height="70%" />
         <div class="comentario">
           <p style="text-align: center;font-weight: bolder;">Calabacines rellenos de arroz negro y calabaza</p>
           <p class="bordes_verdes" style="text-align: center;"> 18 febrero, 2018</p>
