--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="muestra">
         <div class="fondo_gris">
           <p class="exp" style="font-weight: bolder;">Suscríbete a mi blog</p>
-          <img src="/imatges/libro.png" alt="I4" width="40%" height="40%" style="text-align: center;"/>
+          <img src="imatges/libro.png" alt="I4" width="40%" height="40%" style="text-align: center;"/>
           <p class="text"> Y consigue GRATIS mi ebook con 10 recetas exclusivas con superalimentos</p>
         </div>
           <p style="font-weight: bolder;"class="fondo_verde">Apúntame</p>
