--- a/lista/llista.html
+++ b/lista/llista.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Llista de receptes</title>
-  </head>
-  <body>
-    <h1>Llista de receptes</h1>
-    <p>En construcció</p>
-    <a href="/index.html">Tornar a la pàgina principal</a>
-  </body>
-</html>
+<head>
+	<title>Recetas de pastas - Cocina Online</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+		<h1>Recetas de pastas</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Recetas</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<h2>Listado de recetas</h2>
+
+		<div class="receta">
+			<h3>Spaghetti al pesto</h3>
+			<p><strong>Tiempo:</strong> 30 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Lasagna bolognesa</h3>
+			<p><strong>Tiempo:</strong> 1 hora 30 minutos</p>
+			<p><strong>Dificultad:</strong> Media</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Fettuccine Alfredo</h3>
+			<p><strong>Tiempo:</strong> 25 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Spaghetti alla carbonara</h3>
+			<p><strong>Tiempo:</strong> 25 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Raviolis rellenos de espinacas y ricotta</h3>
+			<p><strong>Tiempo:</strong> 1 hora</p>
+			<p><strong>Dificultad:</strong> Media</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Tagliatelle con salsa de tomate y albahaca</h3>
+			<p><strong>Tiempo:</strong> 45 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Cannelloni rellenos de carne</h3>
+			<p><strong>Tiempo:</strong> 1 hora</p>
+			<p><strong>Dificultad:</strong> Media</p>
+			<a href="#">Ver receta</a>
+		</div>
+
+		<div class="receta">
+			<h3>Spaghetti aglio e olio</h3>
+			<p><strong>Tiempo:</strong> 20 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="#">Ver
