--- a/lista/llista.html
+++ b/lista/llista.html
@@ -5,14 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
+	<header class="Rpastas">
 		<h1>Recetas de pastas</h1>
-		<nav>
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Recetas</a></li>
-				<li><a href="#">Contacto</a></li>
-			</ul>
+		<nav class="enlaces"> 
+			<a href="#">Inicio</a></li>
+			<a href="#">Recetas</a></li>
+			<a href="#">Contacto</a></li>
 		</nav>
 	</header>
 
