--- a/lista/llista.html
+++ b/lista/llista.html
@@ -7,11 +7,11 @@
 <body>
 	<header class="Rpastas">
 		<h1>Recetas de pastas</h1>
-		<nav class="enlaces"> 
-			<a href="#">Inicio</a></li>
-			<a href="#">Recetas</a></li>
-			<a href="#">Contacto</a></li>
-		</nav>
+		<nav>
+			<a href="#" class="inicio">Inicio</a>
+			<a href="#" class="recetas">Recetas</a>
+			<a href="#" class="contacto">Contacto</a>
+    </nav>
 	</header>
 
 	<main>
