--- a/lista/llista.html
+++ b/lista/llista.html
@@ -8,9 +8,9 @@
 	<header class="Rpastas">
 		<h1>Recetas de pastas</h1>
 		<nav>
-			<a href="#" class="inicio">Inicio</a>
-			<a href="#" class="recetas">Recetas</a>
-			<a href="#" class="contacto">Contacto</a>
+			<a href="/index.html" class="inicio">Inicio</a>
+			<a href="/receta/recepta.html" class="recetas">Recetas</a>
+			<a href="/contacto/contacte.html" class="contacto">Contacto</a>
     </nav>
 	</header>
 
@@ -58,7 +58,7 @@
 			<p><strong>Dificultad:</strong> Fácil</p>
 			<a href="#">Ver receta</a>
 		</div>
-		
+
 		<div class="receta">
 			<h3>Cannelloni rellenos de carne</h3>
 			<p><strong>Tiempo:</strong> 1 hora</p>
