--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <footer>
-  <nav class="nav_footer">FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+  <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
 </footer>
 </body>
 </html>
