--- a/lista/llista.html
+++ b/lista/llista.html
@@ -2,17 +2,23 @@
 <html>
 <head>
 	<title>Recetas de pastas - Cocina Online</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/css/estiloRecetas.css">
 </head>
-<body>
-	<header class="Rpastas">
-		<h1>Recetas de pastas</h1>
-		<nav>
-			<a href="/index.html" class="inicio">Inicio</a>
-			<a href="/receta/recepta.html" class="recetas">Recetas</a>
-			<a href="/contacto/contacte.html" class="contacto">Contacto</a>
-    </nav>
-	</header>
+<body class="R_body">
+	<header>
+		<div style="text-align: center">
+		<img src="/imatges/Logo-Delicias.png" alt="="</>
+		</div>
+		<div class="nav_head">
+		<nav style="text-align: center;">
+			<a href="/index.html">INICIO</a>
+			<a href="#">SOBRE MI</a>
+			<a href="/lista/llista.html">RECETAS</a>
+			<a href="/contacto/contacte.html">CONTACTO</a>
+			<a href="#">OTRAS COSAS</a>
+		</nav>
+	  </div>
+	  </header>
 
 	<main>
 		<h2>Listado de recetas</h2>
@@ -70,4 +76,11 @@
 			<h3>Spaghetti aglio e olio</h3>
 			<p><strong>Tiempo:</strong> 20 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver
+			<a href="#">Ver</a>
+		</div>
+		</main>
+		<footer>
+			<nav class="R_footer">FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+		</footer>
+</body>
+</html>
