--- a/contacto/contacte.html
+++ b/contacto/contacte.html
@@ -20,7 +20,7 @@
       </div>
       </header>
       <div style="text-align: center;"class="texto">
-        <h2>Formulario De Registro</h2>
+        <h2>Formulario De Contacto</h2>
         <form action="/action_page.php" method="get">
           <label for="fname">Nombre:</label><br>
           <input type="text" id="fname" name="fname" value=""><br>
