--- a/contacto/contacte.html
+++ b/contacto/contacte.html
@@ -44,8 +44,9 @@
         <input type="submit" value="Enviar"><br>
         </form> 
       </div>
+      <div class="margenFinal"></div>
+      <footer>
+        <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+      </footer>
   </body>
-  <footer>
-    <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
-  </footer>
 </html>
