--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       </div>
     </div>
 </div>
+<div class="margenFinal"></div>
 <footer>
   <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
 </footer>
