--- a/lista/llista.html
+++ b/lista/llista.html
@@ -79,8 +79,9 @@
 			<a href="/receta/recepta.html">Ver</a>
 		</div>
 		</main>
+		<div class="margenFinal"></div>
 		<footer>
-			<nav class="R_footer">FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+		  <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
 		</footer>
 </body>
 </html>
