--- a/receta/recepta.html
+++ b/receta/recepta.html
@@ -75,7 +75,9 @@
           <li>Esta receta además de ser económica es una receta saludable, llena de proteínas e hidratos. Yo la presento siempre como plato único, espero que os guste.</li>
         </ol>
       </div>
-      <div></div>
+      <div class="margenFinal"></div>
+      <footer>
+        <nav class="R_footer" >FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+      </footer>
   </body>
- 
 </html>
