--- a/lista/llista.html
+++ b/lista/llista.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Recetas de pastas - Cocina Online</title>
-	<link rel="stylesheet" type="text/css" href="/css/estiloRecetas.css">
+	<link rel="stylesheet" type="text/css" href="css/estiloRecetas.css">
 </head>
 <body>
 	<header>
 		<div style="text-align: center">
-		<img src="/imatges/Logo-Delicias.png" alt="="/>
+		<img src="imatges/Logo-Delicias.png" alt="="/>
 		</div>
 		<div class="nav_head">
 		<nav style="text-align: center;">
